ajustes bis scripts do package.json

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "cy:run": "npx cypress run",
     "cy:open:cucumber": "npx cypress open --config-file cypress-cucumber.json",
     "cy:run:cucumber": "npx cypress run --config-file cypress-cucumber.json --spec **/All.features",
-    "report:merge": "mochawesome-merge > full_report.json",
-    "report:mergeB": "npx mochawesome-merge 'mochawesome-report/*.json' > full_report.json",
-    "report:mocha": "marge full_report.json",
-    "report:mochaB": "npx marge full_report.json",
+    "report:merge": "mochawesome-merge > index.json",
+    "report:mergeB": "npx mochawesome-merge 'mochawesome-report/*.json' > index.json",
+    "report:mocha": "marge index.json",
+    "report:mochaB": "npx marge index.json",
     "report:cleanMocha": "rm -rf mochawesome-report",
-    "report:cleanMochaB": "rm -rf mochawesome-report full_report.json cypress/reports/cucumber-json/** || true",
+    "report:cleanMochaB": "rm -rf mochawesome-report index.json || true",
     "report:cucumber": "node cypress/reports/reporter.js",
     "report:cleanCucumber": "rm -rf cypress/reports/cucumber-json/** cypress/reports/*.html cypress/reports/*.json || true"
   },
